11/05 final push